# TS-seller-marketplace

./: .coveragerc  .env  .flake8  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  report.html
base/: urls.py  views.py
marketplace/: admin.py  forms.py  models.py  urls.py  views.py
marketplace/migrations/: 0001_initial.py
scripts/: run.sh
seller/: admin.py  forms.py  models.py  urls.py  views.py
seller/migrations/: 0001_initial.py  0002_auto_20210609_1324.py  0003_auto_20210610_0929.py  0004_auto_20210610_0930.py
seller/tests/: test_app.py  test_models.py
setup/: settings.py  urls.py
templates/: base.html  index.html
templates/base/: index.html
templates/marketplace/: marketplace_confirm_delete.html  marketplace_detail.html  marketplace_form.html  marketplace_list.html
templates/seller/: index.html  new_seller.html  seller_confirm_delete.html  seller_detail.html  seller_form.html  seller_list.html
