[tool.poetry]
name = "ts-seller-marketplace"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
flake8 = "^3.9.2"
Django = "^3.2.4"
psycopg2-binary = "^2.8.6"
pytest = "^6.2.4"
coverage = "^5.5"

[tool.poetry.dev-dependencies]
autopep8 = "^1.5.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
